Update increase-performance-android-studio.md